Fix pricing headline line height on mobile

--- a/scss/partials/_pricing.scss
+++ b/scss/partials/_pricing.scss
@@ -46,6 +46,7 @@ div.pricing-wrap {
         @include mobile() {
           margin: 0 auto;
           font-size: 36px;
+          line-height: initial;
           max-width: initial;
           padding: 0 24px;
         }
